# RDFPanda-Storage

./: CMakeLists.txt  DatalogEngine.cpp  DatalogEngine.h  InputParser.cpp  InputParser.h  README.md  Trie.cpp  Trie.h  TripleStore.cpp  TripleStore.h  main.cpp
input_examples/: DAG-R.dl  DAG_10k.ttl  DAG_1k.ttl  DAG_20k.ttl  DAG_del.ttl  DAG_test.ttl  data_100k.ttl  data_10k.ttl  data_20k.ttl  data_50k.ttl  example.ttl  example.txt  example_del.ttl  example_ins.ttl  mid-k.ttl  mid.dl  mid.ttl  ruleExample.dl
tests/: CMakeLists.txt  test_input_parser.cpp
tests/input_examples/: example.csv  example.ttl
tests/lib/: CMakeLists.txt
tests/lib/include/gtest/: gtest.h
tests/lib/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-color-test.py  googletest-env-var-test.py  googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-output-test.py  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-setuptestsuite-test.py  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-uninitialized-test.py  gtest_help_test.py  gtest_list_output_unittest.py  gtest_skip_check_output_test.py  gtest_skip_environment_check_output_test.py  gtest_testbridge_test.py  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
